Bug 184266 - link to object images and internet pages don't work
Summary: link to object images and internet pages don't work
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Akarsh Simha
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-14 00:47 UTC by luca.anto
Modified: 2009-10-01 22:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description luca.anto 2009-02-14 00:47:08 UTC
Version:           1.4.1 (using KDE 4.1.3)
OS:                Linux
Installed from:    Ubuntu Packages

Many of the links showed with right-click menu on a object don't work, expecially the "Show Images"; pratically only DSS images are ok.

I've verified some link in the image_url.dat file, and they seems to work; so I've tried to launch kstars from command line; when I tried to see some broken images this was the log:

kstars(12294) SkyMap::slotImage: ImageList index out of bounds:  -1 
kstars(12294) SkyMap::slotImage: Message string " "Mostra immagine NOAO" " not found in ImageTitle. 
kstars(12294) SkyMap::slotImage: ("Show NOAO Image")
Comment 1 Médéric Boquien 2009-02-14 00:50:10 UTC
Hi Luca,

Could you tell which objects exactly? With KDE 4.2 branch i cannot reproduce the problem, all images display fine. Thanks.
Comment 2 luca.anto 2009-02-14 01:01:20 UTC
Pratically all the object which have an image: Messier object, NCG objects, and so on ...
Comment 3 Akarsh Simha 2009-02-14 01:11:31 UTC
The links in the popup menu work for me, but the links in the details dialog don't.

Looks like some internationalization bug. I messed around with the translation for info / image links in the details dialog before KDE 4.2 release. I thought I verified that things were working before making those bugfixes.

[BTW, I'm using a German version for testing]
Comment 4 luca.anto 2009-02-14 14:01:06 UTC
I'm using an Italian version; links in the details dialog are working.
Comment 5 Akarsh Simha 2009-10-01 22:00:20 UTC
SVN commit 1030187 by asimha:

Make the image / info links in the Details Dialog work in translated
versions.

The details dialog would earlier look for the link using a translated
string, which wouldn't work. This is fixed in the same manner as in
KSPopupMenu. This closes bug 184266.

Ah, and this is the first KDE commit of the Hackfest we're holding in
IITM, Chennai now. I hope this will be the first of many. Many thanks
to the excited and enthusiastic group of participants who helped me
fix this bug!

BUG: 184266
CCMAIL: kstars-devel@kde.org



 M  +13 -2     detaildialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1030187